--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@tailwindcss/aspect-ratio": "^0.4.2",
     "axios": "^1.8.2",
     "cors": "^2.8.5",
+    "dom-to-image": "^2.6.0",
     "dotenv": "^16.4.7",
     "framer-motion": "^12.4.10",
     "next": "^15.1.7",
