--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@supabase/supabase-js": "^2.49.4",
     "@tailwindcss/aspect-ratio": "^0.4.2",
     "axios": "^1.8.2",
     "cors": "^2.8.5",
@@ -32,7 +33,8 @@
     "nodemailer": "^6.10.0",
     "pg": "^8.13.1",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "react-hot-toast": "^2.5.2"
   },
   "devDependencies": {
     "@types/node": "^20",
