--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "dom-to-image": "^2.6.0",
     "dotenv": "^16.4.7",
     "framer-motion": "^12.4.10",
+    "html2canvas": "^1.4.1",
     "next": "^15.1.7",
     "node-fetch": "^3.3.2",
     "nodemailer": "^6.10.0",
