--- a/package.json
+++ b/package.json
@@ -35,7 +35,8 @@
     "pg": "^8.13.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "react-hot-toast": "^2.5.2"
+    "react-hot-toast": "^2.5.2",
+    "react-image-crop": "^11.0.7"
   },
   "devDependencies": {
     "@types/node": "^20",
