--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@maizzle/framework": "^5.0.7",
+    "@react-email/components": "^0.0.36",
     "@supabase/supabase-js": "^2.49.4",
     "@tailwindcss/aspect-ratio": "^0.4.2",
     "axios": "^1.8.2",
@@ -28,7 +30,9 @@
     "dom-to-image": "^2.6.0",
     "dotenv": "^16.4.7",
     "framer-motion": "^12.4.10",
+    "html-to-image": "^1.11.13",
     "html2canvas": "^1.4.1",
+    "jspdf": "^3.0.1",
     "next": "^15.1.7",
     "node-fetch": "^3.3.2",
     "nodemailer": "^6.10.0",
@@ -48,6 +52,7 @@
     "eslint-config-next": "^15.1.6",
     "http-proxy-middleware": "^3.0.0",
     "postcss": "^8.4.38",
+    "tailwind-to-inline": "^1.0.5",
     "tailwindcss": "^3.4.4",
     "typescript": "^5"
   }
