--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@react-email/components": "^0.0.36",
     "@supabase/supabase-js": "^2.49.4",
     "@tailwindcss/aspect-ratio": "^0.4.2",
+    "@vercel/analytics": "^1.5.0",
     "axios": "^1.8.2",
     "cors": "^2.8.5",
     "dom-to-image": "^2.6.0",
